[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["T3ag4 <thzincxs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
json2json = "^0.1.0"
twilio = "^7.4.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
